# dyn-dyn

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml
dyn-dyn/: Cargo.toml
dyn-dyn-macros/: Cargo.toml
dyn-dyn-macros/src/: base.rs  cast.rs  derived.rs  impl_block.rs  lib.rs  util.rs
dyn-dyn/src/: cast_target.rs  dyn_trait.rs  fat.rs  internal.rs  lib.rs  table.rs
dyn-dyn/tests/: basics.rs  fat.rs  generics.rs  send_sync.rs
macros/: Cargo.toml
macros/src/: base.rs  cast.rs  impl_block.rs  lib.rs
src/: cast_target.rs  fat.rs  internal.rs  lib.rs  table.rs
tests/: basics.rs  dst_struct.rs  fat.rs  macro_hygiene.rs
