[package]
name = "dyn-dyn"
description = "Flexible trait object downcasting using ptr_metadata"
categories = ["no-std", "rust-patterns"]
keywords = ["cast", "downcast", "trait"]
repository = "https://github.com/aviansie-ben/dyn-dyn"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.2"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
alloc = ["stable_deref_trait/alloc"]
default = ["std"]
dynamic-names = []
std = ["alloc", "stable_deref_trait/std"]

[dependencies]
cfg-if = "1.0"
dyn-dyn-macros = { path = "macros", version = "0.1.2" }
stable_deref_trait = { version = "1.2.0", default-features = false }

[workspace]
members = [
    "macros"
]

