[package]
name = "dyn-dyn-macros"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version="1.0", features=["span-locations"] }
proc-macro-crate = "1.1"
syn = { version="1.0", features=["full"] }
