[package]
name = "dyn-dyn-macros"
description = "Procedural macros used by the dyn-dyn crate"
repository = "https://github.com/aviansie-ben/dyn-dyn"
license = "MIT OR Apache-2.0"
version = "0.1.0-alpha.1"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version="1.0", features=["span-locations"] }
syn = { version="1.0", features=["full"] }
