[package]
name = "dyn-dyn"
version = "0.1.0"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dynamic-names = []

[dependencies]
cfg-if = "1.0"
dyn-dyn-macros = { path = "../dyn-dyn-macros", version="0.1.0" }
stable_deref_trait = "1.2.0"
