[package]
name = "dyn-dyn"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Benjamin Thomas <ben@benthomas.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
alloc = ["stable_deref_trait/alloc"]
default = ["std"]
dynamic-names = []
std = ["alloc", "stable_deref_trait/std"]

[dependencies]
cfg-if = "1.0"
dyn-dyn-macros = { path = "../dyn-dyn-macros", version = "0.1.0" }
stable_deref_trait = { version = "1.2.0", default-features = false }
